v1.2: fixed overflow. adding x btn functionality

--- a/style.css
+++ b/style.css
@@ -8,9 +8,15 @@ html, body {
   background-color: black;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .box {
   border: 0.5em solid white;
-  width: 60em;
+  width: auto;
+  min-width: 60em;
+  max-width: 95%;
   height: auto;
   margin: 0;
   position: absolute;
@@ -18,7 +24,7 @@ html, body {
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-
+  word-break: break-all;
   display: flex;
   align-items: flex-start
 }
@@ -39,11 +45,12 @@ img {
 .footer {
   display: flex;
   width: 100%;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  background-color: black;
 }
 
 a {
